...
        allertController.addAction(UIAlertAction(title: "Ок", style: .cancel))
        view.present(allertController, animated: true)
    }

    func signInWithApple(with controller: LoginViewProtocol) {
        guard let view = controller as? UIViewController else { return }
        let allertController = UIAlertController(title: "Сорян",
                                                 message: """
                                                 У меня пока нет платного аккаунта разработчика Apple, поэтому я не смог реализовать функцию SignIn with Apple.
                                                 Воспользуйтесь обычной формой Sign In или "Войти с помощью Google". Спасибо за понимание!
                                                 """,
                                                 preferredStyle: .alert)
        allertController.addAction(UIAlertAction(title: "Понятно", style: .cancel))
...
