...

    // MARK: - Init
    init() {
        super.init(frame: .zero, collectionViewLayout: UICollectionViewLayout())
        self.setupCollectionView()
        self.collectionViewLayout = self.setupCollectionLayout()
        self.accessibilityLabel = "MainCollectionView"
    }

    required init?(coder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }

...
