...

    @objc func addNewTask() {
        if taskNameField.text?.isEmpty != true && descriptionTaskField.text?.isEmpty != true {
            presenter?.addToDo(title: taskNameField.text ?? "Default",
                               content: descriptionTaskField.text ?? "Default",
                               date: datePicker.date,
                               done: false)
            parrentView?.presenter?.viewWillAppear()
        } else {
            let alertVc = UIAlertController(title: "Ошибка",
                                            message: "Вы не заполнили как минимум одно из обязательных полей для добавления задачи",
                                            preferredStyle: .alert)
            let alertAction = UIAlertAction(title: "Ok", style: .cancel)
            alertVc.addAction(alertAction)
            self.present(alertVc, animated: true)
        }
...
