...
        button.setImage(UIImage(systemName: "xmark"), for: .normal)
        button.addTarget(self, action: #selector(dismissToMain), for: .touchDown)
        return button
    }()

    private lazy var titleOfScreen: UILabel = {
        let label = UILabel.createSimpleLabel(text: "Добавить задачу", size: 35, width: .bold, color: .systemBackground, aligment: .center, numberLines: 0)
        return label
    }()

    private lazy var nameOfTaskField: UITextField = {
        let textField = UITextField.createToDoTextField(
            text: "Наименование задачи",
            textSize: 15,
            weight: .semibold,
            color: .systemGray6,
            returnKey: .done
        )
        textField.delegate = self
...
