...
    lazy var toDoTable: UITableView = {
        let tableView = UITableView(frame: .zero, style: .plain)
        tableView.backgroundColor = UIColor(named: "tasksBackground")
        tableView.register(ToDoCell.self, forCellReuseIdentifier: ToDoCell.reuseIdentifier)
        tableView.separatorStyle = .none
        tableView.showsVerticalScrollIndicator = false
        tableView.accessibilityLabel = "ToDoTable"
        return tableView
    }()

    lazy var taskImage: UIImageView = {
       let imageView = UIImageView()
        imageView.image = UIImage(named: "noTasks")
...
