...
        commonInit()
    }

    // MARK: - Settings
    private func commonInit() {
        setupView()
        self.accessibilityLabel = "CalendarCollectionView"
    }

    private func setupView() {
        register(CalendarCollectionCell.self,
                 forCellWithReuseIdentifier: CalendarCollectionCell.reuseIdentifier)
        bounces = false
...
